# profile.mobile.apps.native.attach-panel-camera

./: .cproject  .project  CMakeLists.txt  attach-panel-camera.manifest  attach-panel-camera.xml
inc/: attach-panel-camera.h
inc/utils/: config.h  logger.h  ui-utils.h
inc/view/: main-view.h  window.h
packaging/: attach-panel-camera.spec
po/: CMakeLists.txt  POTFILES.in  update-po.sh
res/edje/: attach-panel-camera.edc
src/: attach-panel-camera.c
src/utils/: ui-utils.c
src/view/: main-view.c  window.c
